--- a/client/src/style.css
+++ b/client/src/style.css
@@ -1,5 +1,7 @@
 /** @format */
 
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
