--- a/client/src/style.css
+++ b/client/src/style.css
@@ -1,4 +1,6 @@
 /** @format */
+/* @import url(//db.onlinewebfonts.com/c/19b8f54eb1f074fb01efb1c4f02e9623?family=AvertaStd-Regular); */
+@import url("https://fonts.googleapis.com/css2?family=Rubik&display=swap");
 
 @tailwind base;
 @tailwind components;
